# tabular-agent

./: .dockerignore  CHANGELOG.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  README_v0.1.md  README_v0.2.md  README_v0.3.md  demo_complete.py  fix_ci.sh  pyproject.toml  test_local.py  test_pipeline.py
.github/workflows/: ci.yml  release.yml  test.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
conf/: risk_policy.yaml
demo_data/: test.csv  train.csv
demo_results/advanced/20250915_024148/: meta.json  model_card.html  results.json
demo_results/advanced/20250915_024212/: meta.json  model_card.html  results.json
demo_results/advanced/20250915_024248/: meta.json  model_card.html  results.json
demo_results/basic/20250915_024146/: meta.json  model_card.html  results.json
demo_results/basic/20250915_024210/: meta.json  model_card.html  results.json
demo_results/basic/20250915_024245/: meta.json  model_card.html  results.json
docs/: setup-secrets.md
examples/: binary_classification.csv  categorical.csv  missing_data.csv  regression.csv  test_binary.csv  test_timeseries.csv  timeseries.csv  train_binary.csv  train_timeseries.csv
runs/: kb_index.pkl
runs/complete_example/20250915_023937/: meta.json  model_card.html  results.json
runs/demo/20250914_153648/: model_card.html  results.json
runs/demo/20250914_153701/: meta.json  model_card.html  results.json
runs/demo/20250914_153713/: model_card.html  results.json
runs/demo/20250914_153723/: meta.json  model_card.html  results.json
runs/fix_test/20250914_164248/: meta.json  model_card.html  results.json
runs/local_test/20250914_164150/: meta.json  model_card.html  results.json
runs/local_test/20250915_024633/: meta.json  model_card.html  results.json
runs/local_test/20250915_025110/: meta.json  model_card.html  results.json
runs/test_basic/20250914_153804/: meta.json  model_card.html  results.json
runs/test_basic/20250914_161323/: meta.json  model_card.html  results.json
runs/test_basic/20250914_162520/: meta.json  model_card.html  results.json
runs/test_timeseries/20250914_153807/: meta.json  model_card.html  results.json
runs/test_timeseries/20250914_161326/: meta.json  model_card.html  results.json
runs/test_timeseries/20250914_162523/: meta.json  model_card.html  results.json
runs/timeseries_demo/20250914_153732/: meta.json  model_card.html  results.json
runs/v02_demo/20250914_155413/: meta.json  model_card.html  results.json
runs/v02_timeseries_demo/20250914_155423/: meta.json  model_card.html  results.json
runs/v03_demo/20250914_161254/: meta.json  model_card.html  results.json
runs/v10_demo/20250914_162455/: model_card.html  results.json
runs/v10_demo/20250914_162513/: meta.json  model_card.html  results.json
src/tabular_agent/: __init__.py
src/tabular_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tabular_agent/agent/: __init__.py  planner.py  reflector.py
src/tabular_agent/agent/kb/: __init__.py  index.py  query.py
src/tabular_agent/cli/: __init__.py  audit.py  blend.py  entry.py  run.py
src/tabular_agent/conf/: defaults.yaml
src/tabular_agent/conf/blend/: strategies.yaml
src/tabular_agent/conf/fe/: encoders.yaml
src/tabular_agent/conf/models/: registry.yaml
src/tabular_agent/core/: __init__.py  audit.py  io.py  orchestrator.py  profile.py
src/tabular_agent/core/blend/: __init__.py  basic.py
src/tabular_agent/core/evaluate/: __init__.py  metrics.py  stability.py
src/tabular_agent/core/fe/: __init__.py  encoders.py  pipelines.py
src/tabular_agent/core/models/: __init__.py  registry.py  trainers.py
src/tabular_agent/core/report/: __init__.py  card.py
src/tabular_agent/core/tune/: __init__.py  optuna.py
src/tabular_agent/examples/: generate_example_data.py
tests/: test_kb_index.py  test_planner_guard.py  test_reflector.py  test_stability.py
