[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabular-agent"
version = "1.0.0"
description = "Automated tabular ML pipeline from CSV to model card reports"
authors = [
    {name = "tabular-agent team", email = "tabular-agent@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "lightgbm>=3.2.0",
    "xgboost>=1.5.0",
    "catboost>=1.0.0",
    "optuna>=3.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "psutil>=5.8.0",
    "tqdm>=4.60.0",
    "click>=8.0.0",
    "joblib>=1.1.0",
    "pydantic>=1.10.0",
    "requests>=2.25.0",
    "rank-bm25>=0.2.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
audit = [
    "leakage-buster>=0.1.0"
]
blend = [
    "crediblend>=0.1.0"
]
all = [
    "tabular-agent[dev,audit,blend]"
]

[project.scripts]
tabular-agent = "tabular_agent.cli.entry:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    ".*/bokeh/.*",
    ".*/matplotlib/.*",
    ".*/seaborn/.*",
    ".*/plotly/.*",
    ".*/catboost/.*",
    ".*/lightgbm/.*",
    ".*/xgboost/.*"
]
